@@ -1,6 +1,6 @@
 # Makefile for accounting gather profile plugins
 
-SUBDIRS = none
+SUBDIRS = none influxdb
 if BUILD_HDF5
 SUBDIRS += hdf5
 endif
